--- a/index.html
+++ b/index.html
@@ -3,31 +3,100 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nascer&Cuidar - Consultoria Personalizada</title>
+    <title>Cuidar e Nascer - Consultoria Personalizada</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
 </head>
 <body>
-        <nav class="main-nav">
-            <ul>
-                <li><a href="index.html">Início</a></li>
-                <li><a href="#oferecemos">O que oferecemos</a></li>
-                <li><a href="#equipe">Equipe</a></li>
-                <li><a href="#galeria">Galeria</a></li>
-                <li><a href="#beneficios">Benefícios</a></li>
-                <li><a href="#depoimentos">Depoimentos</a></li>
-                <li><a href="#faq">FAQ</a></li>
-                <li><a href="#contato">Contato</a></li>
-                <li><a href="cursos.html">Cursos</a></li>
-            </ul>
-        </nav>
+    <button class="hamburger" id="hamburgerBtn" aria-label="Abrir menu" aria-expanded="false" aria-controls="mainNav">
+        <span></span>
+        <span></span>
+        <span></span>
+    </button>
+    <nav class="main-nav" id="mainNav">
+        <ul>
+            <li><a href="index.html">Início</a></li>
+            <li><a href="#oferecemos">O que oferecemos</a></li>
+            <li><a href="#equipe">Equipe</a></li>
+            <li><a href="#galeria">Galeria</a></li>
+            <li><a href="#beneficios">Benefícios</a></li>
+            <li><a href="#depoimentos">Depoimentos</a></li>
+            <li><a href="#faq">FAQ</a></li>
+            <li><a href="#contato">Contato</a></li>
+            <li><a href="cursos.html">Cursos</a></li>
+        </ul>
+    </nav>
     <header>
-        <h1>Nascer&Cuidar</h1>
+        <img src="assets/logo.png" alt="Logo Cuidar e Nascer" class="site-logo">
+        <h1>Cuidar e Nascer</h1>
         <p>Consultoria personalizada para gestantes, parturientes e puérperas</p>
     </header>
     <main>
-        <h2 id="oferecemos">O que oferecemos</h2>
-        <ul>
+           <section class="sobre-cuidar-nascer" id="sobre">
+            <div class="sobre-container">
+                <div class="sobre-descricao">
+                    <h2>Sobre a Cuidar e Nascer</h2>
+                    <p>
+                        A Cuidar e Nascer acredita que cada gestação é única e merece um olhar individualizado, acolhedor e respeitoso. Nossa equipe oferece acompanhamento integral, escuta ativa e apoio emocional, promovendo o protagonismo da mulher e da família em todas as etapas: pré-natal, parto e pós-parto.
+                    </p>
+                </div>
+                <div class="servicos-lista">
+                    <div class="servico-card">
+                        <span class="servico-icone">🤱</span>
+                        <h3>Parto Humanizado</h3>
+                        <p>Apoio e orientação para um nascimento respeitoso e seguro, com protagonismo da mulher.</p>
+                    </div>
+                    <div class="servico-card">
+                        <span class="servico-icone">🍼</span>
+                        <h3>Amamentação</h3>
+                        <p>Consultoria completa: preparo, técnicas e suporte pós-parto para amamentação saudável.</p>
+                    </div>
+                    <div class="servico-card">
+                        <span class="servico-icone">👩‍⚕️</span>
+                        <h3>Acompanhamento Pré e Pós-Natal</h3>
+                        <p>Orientação, escuta ativa e acompanhamento integral em todas as fases da gestação.</p>
+                    </div>
+                    <div class="servico-card">
+                        <span class="servico-icone">👶</span>
+                        <h3>Cuidados com o Bebê e a Mãe</h3>
+                        <p>Orientação prática e emocional para o bem-estar materno-infantil e adaptação à nova rotina.</p>
+                    </div>
+                    <div class="servico-card">
+                        <span class="servico-icone">📝</span>
+                        <h3>Plano de Parto Personalizado</h3>
+                        <p>Elaboração do plano de parto respeitando desejos, necessidades e evidências científicas.</p>
+                    </div>
+                    <div class="servico-card">
+                        <span class="servico-icone">🏠</span>
+                        <h3>Atendimento Domiciliar e Online</h3>
+                        <p>Flexibilidade para atender você onde se sentir mais confortável e segura.</p>
+                    </div>
+                    <div class="servico-card">
+                        <span class="servico-icone">💬</span>
+                        <h3>Suporte Emocional</h3>
+                        <p>Acolhimento, escuta ativa e apoio durante toda a gestação, parto e pós-parto.</p>
+                    </div>
+                    <div class="servico-card">
+                        <span class="servico-icone">🎓</span>
+                        <h3>Educação Perinatal</h3>
+                        <p>Cursos, rodas de conversa e workshops para informar e empoderar famílias.</p>
+                    </div>
+                    <div class="servico-card">
+                        <span class="servico-icone">👩‍🦰</span>
+                        <h3>Equipe Especializada</h3>
+                        <p>Enfermeiras obstetras e doulas experientes, atuando com ética, carinho e respeito.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="cuidado-humanizado" id="cuidado-humanizado">
+            <div class="cuidado-bg">
+                <div class="cuidado-content">
+                    <h2>Cuidado Humanizado e Personalizado</h2>
+                    <p>
+                        No Nascer e Cuidar, acreditamos que cada gestação é única e merece um olhar individualizado, acolhedor e respeitoso. Nossa equipe oferece acompanhamento integral, escuta ativa e apoio emocional, promovendo o protagonismo da mulher e da família em todas as etapas: pré-natal, parto e pós-parto.
+                    </p>
+                  <ul>
             <li>Parto humanizado: apoio e orientação para um nascimento respeitoso e seguro</li>
             <li>Consultoria em amamentação: preparo, técnicas e suporte pós-parto</li>
             <li>Acompanhamento pré-natal e pós-natal</li>
@@ -38,6 +107,11 @@
             <li>Educação perinatal: cursos, rodas de conversa e workshops</li>
             <li>Atuação de enfermeiras obstetras e doulas experientes</li>
         </ul>
+                </div>
+            </div>
+        </section>
+     
+   
         <h2 id="equipe">Nossa Equipe</h2>
         <div class="team">
             <div class="team-member">
@@ -51,6 +125,12 @@
                 <h3>Enf. Andreza Moraes</h3>
                 <p>Enfermeira Obstetra</p>
                 <p class="curriculo">Graduada pela USP, pós-graduada em Saúde da Mulher, com ampla atuação em consultoria de amamentação, educação perinatal e acompanhamento de gestantes. Referência em humanização do cuidado e apoio emocional.</p>
+            </div>
+            <div class="team-member">
+                <img src="https://randomuser.me/api/portraits/women/67.jpg" alt="Foto de Camila Ribeiro" class="profile-pic">
+                <h3>Enf. Camila Ribeiro</h3>
+                <p>Enfermeira Obstetra</p>
+                <p class="curriculo">Especialista em Saúde Materno-Infantil pela UNIFESP, com experiência em partos domiciliares e hospitalares. Atua também em projetos sociais de apoio à gestante e é apaixonada por educação em saúde.</p>
             </div>
         </div>
         <section class="galeria" id="galeria">
@@ -108,34 +188,67 @@
             <div class="faq-lista">
                 <details>
                     <summary>O que faz uma enfermeira obstetra?</summary>
-                    <p>Ela acompanha a gestação, parto e pós-parto, oferecendo assistência técnica, emocional e informativa, sempre com foco na humanização do cuidado.</p>
+                    <p>Ela acompanha a gestação, parto e pós-parto, oferecendo assistência técnica, emocional e informativa, sempre com foco na humanização do cuidado. A enfermeira obstetra pode realizar consultas de pré-natal, monitorar sinais vitais, orientar sobre exames, apoiar o parto normal e atuar em situações de emergência, além de fornecer suporte à amamentação e ao puerpério.</p>
                 </details>
                 <details>
                     <summary>Qual a diferença entre doula e enfermeira obstetra?</summary>
-                    <p>A doula oferece suporte emocional e informativo, enquanto a enfermeira obstetra também realiza procedimentos técnicos e monitoramento clínico.</p>
+                    <p>A doula oferece suporte emocional, físico e informativo, ajudando a gestante a se sentir segura e acolhida durante o parto, mas não realiza procedimentos clínicos. Já a enfermeira obstetra, além do suporte emocional, possui formação técnica para realizar procedimentos médicos, monitorar a saúde da mãe e do bebê, administrar medicamentos e atuar em situações de risco.</p>
                 </details>
                 <details>
                     <summary>O atendimento pode ser domiciliar?</summary>
-                    <p>Sim! Oferecemos atendimento em casa, no hospital ou online, conforme a necessidade da família.</p>
+                    <p>Sim! Oferecemos atendimento em casa, no hospital ou online, conforme a necessidade da família. O atendimento domiciliar proporciona mais conforto, privacidade e acolhimento, permitindo que a gestante esteja em um ambiente familiar e seguro, com acompanhamento profissional em todas as etapas.</p>
+                </details>
+                <details>
+                    <summary>Como funciona o plano de parto?</summary>
+                    <p>O plano de parto é um documento elaborado junto à gestante, onde são registradas suas preferências, desejos e expectativas para o momento do parto. Ele inclui informações sobre intervenções, métodos de alívio da dor, presença de acompanhantes, entre outros. O objetivo é garantir que a mulher seja protagonista do seu parto, respeitando suas escolhas e promovendo um ambiente seguro e acolhedor.</p>
+                </details>
+                <details>
+                    <summary>Vocês oferecem suporte após o nascimento?</summary>
+                    <p>Sim! Nosso acompanhamento se estende ao pós-parto, com orientações sobre amamentação, cuidados com o bebê, recuperação da mãe, apoio emocional e prevenção de intercorrências como depressão pós-parto. Estamos disponíveis para tirar dúvidas e oferecer suporte presencial ou online conforme a necessidade da família.</p>
                 </details>
             </div>
         </section>
         <section class="contato" id="contato">
             <h2>Agende uma Consulta</h2>
             <p>Pronta para receber um atendimento personalizado? Entre em contato conosco e dê o primeiro passo para uma experiência de gestação acolhedora e segura.</p>
-            <form class="contato-form" action="#" method="post">
-                <label for="nome">Nome Completo</label>
+            <form class="contato-form" id="contatoForm" action="#" method="post">
+                <label for="nome">Nome Completo*</label>
                 <input type="text" id="nome" name="nome" required>
                 <label for="email">E-mail</label>
-                <input type="email" id="email" name="email" required>
+                <input type="email" id="email" name="email">
+                <label for="idade">Idade</label>
+                <input type="number" id="idade" name="idade" min="10" max="60">
+                <label for="gestacao">Semanas de gestação</label>
+                <input type="number" id="gestacao" name="gestacao" min="1" max="45">
                 <label for="info">Outras informações da gestação</label>
-                <textarea id="info" name="info" rows="4" placeholder="Ex: semanas de gestação, dúvidas, preferências..."></textarea>
+                <textarea id="info" name="info" rows="4" placeholder="Ex: dúvidas, preferências, histórico de saúde..."></textarea>
                 <button type="submit" class="btn-contato">Enviar</button>
             </form>
+            <script>
+            document.getElementById('contatoForm').onsubmit = function(e) {
+                e.preventDefault();
+                const nome = document.getElementById('nome').value;
+                const email = document.getElementById('email').value;
+                const telefone = document.getElementById('telefone').value;
+                const idade = document.getElementById('idade').value;
+                const gestacao = document.getElementById('gestacao').value;
+                const info = document.getElementById('info').value;
+                let msg = `Olá! Gostaria de atendimento personalizado.\n`;
+                msg += `Nome: ${nome}\n`;
+                if(email) msg += `E-mail: ${email}\n`;
+                if(telefone) msg += `Telefone: ${telefone}\n`;
+                if(idade) msg += `Idade: ${idade}\n`;
+                if(gestacao) msg += `Semanas de gestação: ${gestacao}\n`;
+                if(info) msg += `Informações: ${info}`;
+                const url = `https://wa.me/5599999999999?text=${encodeURIComponent(msg)}`;
+                window.open(url, '_blank');
+            };
+            </script>
         </section>
+     
     </main>
     <footer>
-        &copy; 2025 Nascer&Cuidar. Todos os direitos reservados.
+        &copy; 2025 Cuidar e Nascer. Todos os direitos reservados.
     </footer>
     <a href="https://wa.me/5599999999999" class="whatsapp-float" target="_blank" aria-label="Fale conosco pelo WhatsApp">
         <svg viewBox="0 0 32 32"><path d="M16.003 3.2c-7.06 0-12.8 5.74-12.8 12.8 0 2.26.6 4.47 1.74 6.41l-1.84 6.73a1.33 1.33 0 0 0 1.63 1.63l6.73-1.84a12.77 12.77 0 0 0 6.44 1.74c7.06 0 12.8-5.74 12.8-12.8s-5.74-12.8-12.8-12.8zm0 23.36c-2.01 0-3.99-.53-5.72-1.53l-.41-.24-5.01 1.37 1.37-5.01-.24-.41a10.7 10.7 0 1 1 10.01 6.82zm5.47-7.98c-.3-.15-1.77-.87-2.05-.97-.28-.1-.48-.15-.68.15-.2.3-.78.97-.96 1.17-.18.2-.35.22-.65.07-.3-.15-1.27-.47-2.42-1.5-.9-.8-1.51-1.78-1.69-2.08-.18-.3-.02-.46.13-.61.13-.13.3-.35.45-.53.15-.18.2-.3.3-.5.1-.2.05-.37-.02-.52-.07-.15-.68-1.65-.93-2.26-.24-.58-.48-.5-.68-.51-.18-.01-.37-.01-.57-.01-.2 0-.52.07-.8.37-.28.3-1.05 1.02-1.05 2.48 0 1.46 1.07 2.87 1.22 3.07.15.2 2.1 3.21 5.09 4.38.71.31 1.26.5 1.69.64.71.23 1.36.2 1.87.12.57-.09 1.77-.72 2.02-1.41.25-.69.25-1.28.18-1.41-.07-.13-.27-.2-.57-.35z"/></svg>
@@ -172,6 +285,33 @@
           1000: { slidesPerView: 3 }
         }
       });
+      // Menu Hamburguer
+    const hamburgerBtn = document.getElementById('hamburgerBtn');
+    const mainNav = document.getElementById('mainNav');
+    hamburgerBtn.addEventListener('click', function() {
+      mainNav.classList.toggle('open');
+      document.body.classList.toggle('menu-open');
+      const expanded = hamburgerBtn.getAttribute('aria-expanded') === 'true';
+      hamburgerBtn.setAttribute('aria-expanded', !expanded);
+    });
+    // Fecha menu ao clicar em um link
+    document.querySelectorAll('.main-nav a').forEach(link => {
+      link.addEventListener('click', (e) => {
+        if(window.innerWidth <= 900) {
+          mainNav.classList.remove('open');
+          document.body.classList.remove('menu-open');
+          hamburgerBtn.setAttribute('aria-expanded', false);
+          hamburgerBtn.blur();
+          // Se for navegação para outra página, força recarregar antes do clique
+          if(link.getAttribute('href') && !link.getAttribute('href').startsWith('#')) {
+            e.preventDefault();
+            setTimeout(() => {
+              window.location.href = link.getAttribute('href');
+            }, 10);
+          }
+        }
+      });
+    });
     </script>
 </body>
 </html>
