--- a/index.html
+++ b/index.html
@@ -250,8 +250,8 @@
     <footer>
         &copy; 2025 Cuidar e Nascer. Todos os direitos reservados.
     </footer>
-    <a href="https://wa.me/5599999999999" class="whatsapp-float" target="_blank" aria-label="Fale conosco pelo WhatsApp">
-        <svg viewBox="0 0 32 32"><path d="M16.003 3.2c-7.06 0-12.8 5.74-12.8 12.8 0 2.26.6 4.47 1.74 6.41l-1.84 6.73a1.33 1.33 0 0 0 1.63 1.63l6.73-1.84a12.77 12.77 0 0 0 6.44 1.74c7.06 0 12.8-5.74 12.8-12.8s-5.74-12.8-12.8-12.8zm0 23.36c-2.01 0-3.99-.53-5.72-1.53l-.41-.24-5.01 1.37 1.37-5.01-.24-.41a10.7 10.7 0 1 1 10.01 6.82zm5.47-7.98c-.3-.15-1.77-.87-2.05-.97-.28-.1-.48-.15-.68.15-.2.3-.78.97-.96 1.17-.18.2-.35.22-.65.07-.3-.15-1.27-.47-2.42-1.5-.9-.8-1.51-1.78-1.69-2.08-.18-.3-.02-.46.13-.61.13-.13.3-.35.45-.53.15-.18.2-.3.3-.5.1-.2.05-.37-.02-.52-.07-.15-.68-1.65-.93-2.26-.24-.58-.48-.5-.68-.51-.18-.01-.37-.01-.57-.01-.2 0-.52.07-.8.37-.28.3-1.05 1.02-1.05 2.48 0 1.46 1.07 2.87 1.22 3.07.15.2 2.1 3.21 5.09 4.38.71.31 1.26.5 1.69.64.71.23 1.36.2 1.87.12.57-.09 1.77-.72 2.02-1.41.25-.69.25-1.28.18-1.41-.07-.13-.27-.2-.57-.35z"/></svg>
+    <a href="https://wa.me/5599999999999" target="_blank" aria-label="Fale conosco pelo WhatsApp">
+        <img src="assets/whatsapp.png" class="whatsapp-float" alt="WhatsApp" />
     </a>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script>
